--- a/aryan.css
+++ b/aryan.css
@@ -2,12 +2,12 @@
 #intro{
     text-align: center;
     font-size: 50px;
-    font-family: cursive;
+    font-family:'Times New Roman', Times, serif;
 }
 header{
     margin-left: 1.3%;
     font-size: 35px;
-    font-family: cursive;
+    font-family:'Times New Roman', Times, serif;
 }
 img {
     width: 450px;
