--- a/aryan.css
+++ b/aryan.css
@@ -1,34 +1,40 @@
 /* Add styles for hover cards */
-#intro{
+#intro {
     text-align: center;
     font-size: 50px;
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, serif;
 }
-header{
+p{
+    font-size: 20px;
+}
+header {
     margin-left: 1.3%;
     font-size: 35px;
-    font-family:'Times New Roman', Times, serif;
+    font-family: 'Times New Roman', Times, serif;
 }
+
 img {
-    width: 450px;
+    width: 100%;
     height: 300px;
-  }
+}
+
 .column {
     float: left;
-    width: 33%;
+    width: 100%;
     padding: 1px;
-  }
-ul{
+}
+
+ul {
     font-size: 30px;
     margin-bottom: 0;
 }
- 
+
 .row::after {
     content: "";
     clear: both;
     display: table;
-  }
- 
+}
+
 .hover-card {
     background-color: #fff;
     border-radius: 10px;
@@ -43,7 +49,6 @@ ul{
 }
 
 .hover-card-content {
-
     text-align: left;
 }
 
@@ -56,11 +61,9 @@ ul{
     margin-bottom: 20px;
 }
 
-
 .button-animation {
     animation: button-scale 0.5s ease-out;
 }
-
 
 .floating-container {
     position: fixed;
@@ -81,9 +84,6 @@ ul{
     animation: floatAnimation 3s linear infinite;
 }
 
-
-
-
 @keyframes floatAnimation {
     0% {
         transform: translateY(0);
@@ -93,5 +93,18 @@ ul{
     }
     100% {
         transform: translateY(0);
+    }
+}
+
+/* Responsive styles */
+@media (min-width: 768px) {
+    .column {
+        width: 50%;
+    }
+}
+
+@media (min-width: 1024px) {
+    .column {
+        width: 33%;
     }
 }
