--- a/aryan.css
+++ b/aryan.css
@@ -13,11 +13,37 @@ header {
     font-family: 'Times New Roman', Times, serif;
 }
 
-img {
-    width: 100%;
+/* img {
+    /* width: 100%; */
+    /* height: 300px; */
+    /* border-radius: 35px;
+    /* background: url(paper.gif); */
+   /* background-position: left;
+    background-repeat: repeat;
+    padding: 20px;
+    width: 90%;
     height: 300px;
+    transition: property duration timing-function delay|initial|inherit
+}*/
+  .div-img{
+    justify-content: center;
+    align-items: center;
+    display:flex;
+    padding-top:20%;
 }
-
+img{
+    transition: transform .2s;
+    width:100%;
+    height:300px;
+    /* margin: auto; */
+     margin-right: 52px;
+    border-radius: 35px;
+    padding: 10px;
+    
+}
+img:hover{
+    transform:scale(1.1);
+}
 .column {
     float: left;
     width: 100%;
@@ -36,7 +62,8 @@ ul {
 }
 
 .hover-card {
-    background-color: #fff;
+    background-color: aliceblue;
+    
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -46,10 +73,12 @@ ul {
 
 .hover-card:hover {
     transform: translateY(-10px);
+
 }
 
 .hover-card-content {
     text-align: left;
+
 }
 
 .hover-card h2 {
@@ -108,3 +137,24 @@ ul {
         width: 33%;
     }
 }
+.episodes {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .episode {
+    min-width: max-content;
+    margin-bottom: 1rem;
+    padding: 1rem 1rem;
+    border-radius: 10px;
+    border: 0;
+    background: aliceblue;
+    color:black;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: x-large;
+    cursor: pointer;
+  }
+
+  .episode:hover {
+    background: #7ecef9;
+  }
