--- a/aryan.css
+++ b/aryan.css
@@ -112,6 +112,10 @@ ul {
     opacity: 0.7;
     animation: floatAnimation 3s linear infinite;
 }
+.end{
+    height: 50px;
+    width: 50px;
+}
 
 @keyframes floatAnimation {
     0% {
@@ -124,6 +128,7 @@ ul {
         transform: translateY(0);
     }
 }
+
 
 /* Responsive styles */
 @media (min-width: 768px) {
